# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//mises/browser/autocomplete/sources.gni")
import("//mises/browser/ipfs/sources.gni")
import("//mises/browser/web3sites_safe/sources.gni")
import("//mises/browser/brave_wallet/android/sources.gni")
import("//extensions/buildflags/buildflags.gni")
import("//mises/chromium_src/chrome/browser/prefs/sources.gni")
import("//mises/chromium_src/chrome/browser/sources.gni")
import("//mises/browser/brave_wallet/notifications/sources.gni")
import("//mises/browser/permissions/sources.gni")
import("//mises/browser/ephemeral_storage/sources.gni")


mises_chrome_browser_visibility = [
  "//mises/browser/*",
  "//mises/test:*",

  # these are layering violation and need to be fixed

  # Chrome does not yet define a visibility list by itself, meaning we can't
  # append our list to them and that what we have here will become law not just
  # for Brave, but also for the rest of chrome. Thus, we need to provide our own
  # permissive list for chrome here too, to be removed in the future if Chrome
  # ever provides it's own list (at which point we'll append instead of set).
  "//chrome:dependencies",
  "//chrome/app/*",
  "//chrome/test/*",
  "//extensions/*",
]

mises_chrome_browser_sources = [
    "//mises/browser/mises_browser_main_parts.cc",
    "//mises/browser/mises_browser_main_parts.h",
    "//mises/browser/mises_browser_process_impl.cc",
    "//mises/browser/mises_browser_process_impl.h",
    "//mises/browser/mises_browser_process.cc",
    "//mises/browser/mises_browser_process.h",
    "//mises/browser/mises_local_state_prefs.cc",
    "//mises/browser/mises_local_state_prefs.h",
    "//mises/browser/mises_profile_prefs.cc",
    "//mises/browser/mises_profile_prefs.h",

    "//mises/browser/mises_tab_helpers.cc",
    "//mises/browser/mises_tab_helpers.h",

    "//mises/browser/mises_content_browser_client.cc",
    "//mises/browser/mises_content_browser_client.h",
    "//mises/browser/browser_context_keyed_service_factories.cc",
    "//mises/browser/browser_context_keyed_service_factories.h",
]

mises_chrome_browser_deps = [
  "//base",
  "//mises/browser/brave_wallet",
  "//mises/browser/brave_wallet:brave_wallet_delegate",
  "//mises/browser/brave_wallet:tab_helper",
  "//mises/browser/profiles",
  "//mises/browser/net",
  "//mises/components/constants",
  "//mises/components/brave_wallet/browser",
  "//mises/components/brave_wallet/common",
  "//mises/components/brave_wallet/common:mojom",
  "//mises/components/version_info",
  "//mises/browser/ui",
  "//mises/third_party/blink/renderer",
  "//chrome/browser:browser_process",
  "//chrome/browser/profiles:profile",
  "//chrome/browser/ui",
  "//chrome/common",
  "//chrome/common:channel_info",
  "//components/account_id",
  "//components/autofill/core/common",
  "//components/browsing_data/core",
  "//components/content_settings/browser",
  "//components/content_settings/core/browser",
  "//components/content_settings/core/common",
  "//components/dom_distiller/core",
  "//components/embedder_support",
  "//components/feed/core/shared_prefs:feed_shared_prefs",
  "//components/gcm_driver:gcm_buildflags",
  "//components/metrics",
  "//components/ntp_tiles",
  "//components/password_manager/core/common",
  "//components/permissions",
  "//components/policy/core/common:common_constants",
  "//components/pref_registry",
  "//components/prefs",
  "//components/privacy_sandbox:privacy_sandbox_prefs",
  "//components/safe_browsing/core/common:safe_browsing_prefs",
  "//components/search_engines",
  "//components/services/heap_profiling/public/mojom",
  "//components/signin/public/base",
  "//components/sync/base",
  "//components/translate/core/browser:translate_pref_names",
  "//components/version_info",
  "//components/version_info:channel",
  "//content/public/browser",
  "//content/public/common",
  "//extensions/buildflags",
  "//mojo/public/cpp/bindings",
  "//net",
  "//services/metrics/public/cpp:metrics_cpp",
  "//services/network/public/cpp",
  "//third_party/abseil-cpp:absl",
  "//third_party/blink/public/mojom:mojom_platform_headers",
  "//third_party/widevine/cdm:buildflags",
  "//ui/base",
  "//url",
]

if (is_mac) {
  mises_chrome_browser_sources += [
    "//mises/browser/mises_browser_main_parts_mac.h",
    "//mises/browser/mises_browser_main_parts_mac.mm",
    "//mises/browser/mises_shell_integration_mac.h",
    "//mises/browser/mises_shell_integration_mac.mm",
  ]
}

if (is_android) {
  mises_chrome_browser_sources += [
    "//mises/chromium_src/chrome/browser/android/app_menu_bridge.cc",
    "//mises/browser/android/mises/mises_controller.cc",
    "//mises/browser/android/mises/mises_controller.h",
    "//mises/chromium_src/chrome/browser/obsolete_system/obsolete_system_android.cc",
    "//mises/chromium_src/chrome/browser/download/drag_download_item_android.cc",
    "//mises/chromium_src/chrome/browser/background/background_mode_manager_android.cc",
    "//mises/chromium_src/chrome/browser/first_run/first_run_internal_android.cc",

    "//chrome/common/process_singleton_lock_posix.cc",
    "process_singleton_posix.cc",
    "importer/firefox_profile_lock_posix.cc",
    #"//chrome/common/importer/firefox_importer_utils_linux.cc",
    
    "policy/policy_path_parser_linux.cc",
    "safe_browsing/extension_telemetry/tabs_execute_script_signal.cc",
    "safe_browsing/extension_telemetry/remote_host_contacted_signal.cc",

    "enterprise/connectors/common.cc",
    "enterprise/connectors/common.h",
    "enterprise/connectors/connectors_service.cc",
    "enterprise/connectors/connectors_service.h",
    "enterprise/connectors/analysis/content_analysis_downloads_delegate.cc",
    "enterprise/connectors/analysis/content_analysis_downloads_delegate.h",

    "ui/chrome_web_modal_dialog_manager_delegate.cc",
    "media/webrtc/desktop_media_picker_controller.cc",

    "upgrade_detector/get_installed_version_linux.cc",
    "upgrade_detector/directory_monitor.cc"

  ]

  mises_chrome_browser_deps += [
    "//mises/browser/android:android_browser_process",
    "//mises/build/android:jni_headers",
    "//mises/android/features/mises:jni_headers",
    "//chrome/android:jni_headers",
    "//components/sync_device_info",
    "//chrome/utility:utility",
  ]
  mises_chrome_browser_sources += mises_browser_brave_wallet_android_sources
  mises_chrome_browser_deps += mises_browser_brave_wallet_android_deps
} else {
  mises_chrome_browser_sources += [
  ]

  mises_chrome_browser_deps += [
    "//mises/app:mises_generated_resources_grit",
    "//components/infobars/content",
  ]
}

if (enable_extensions) {
  mises_chrome_browser_deps += [
    "//mises/browser/extensions",
    "//chrome/browser/extensions",
    "//extensions/browser",
    "//extensions/common:common_constants",
  ]

}


if (enable_widevine) {
  mises_chrome_browser_sources += [
    "//mises/browser/mises_drm_tab_helper.cc",
    "//mises/browser/mises_drm_tab_helper.h",
  ]
  mises_chrome_browser_deps += [
    "//mises/browser/widevine",
    "//mises/components/mises_drm",
    "//mises/components/widevine:constants",
  ]
}

if (is_win) {
  mises_chrome_browser_sources += [
    "//mises/browser/mises_shell_integration_win.cc",
    "//mises/browser/mises_shell_integration_win.h",
    "//mises/browser/default_protocol_handler_utils_win.cc",
    "//mises/browser/default_protocol_handler_utils_win.h",
  ]

  mises_chrome_browser_deps += [
    "//chrome/install_static:install_static_util",
    "//chrome/installer/util:with_no_strings",
  ]
}

if (is_win && is_official_build) {
  mises_chrome_browser_sources += [
    "//chrome/browser/google/google_update_win.cc",
    "//chrome/browser/google/google_update_win.h",
    "//chrome/browser/google/switches.cc",
    "//chrome/browser/google/switches.h",
  ]

  mises_chrome_browser_deps += [ "//google_update" ]
}

mises_chrome_browser_public_deps = [
  "//mises/browser:browser_process",
  "//mises/components/variations:constants",
]

if (is_mac) {
  mises_chrome_framework_public_deps = [ "//mises:framework_bundle_data" ]
  mises_chrome_framework_bundle_deps = [ "//mises:framework_bundle_data" ]
  mises_chrome_framework_contents = [ "Frameworks" ]
  mises_chrome_framework_configs = [ "//mises/build/rust:strip_rust_symbols" ]
}


mises_chrome_browser_deps += mises_chromium_src_chrome_browser_deps


mises_chrome_browser_exception_sources = []
mises_chrome_browser_exception_deps = []
mises_chrome_browser_exception_allow_circular_includes_from = []
if (is_android) {
  mises_chrome_browser_deps += [
    "//services/screen_ai/public/mojom:factory",
  ]
  mises_chrome_browser_exception_sources += [

    
    "download/download_crx_util_android.cc",
    "resources_integrity.cc",
    "resources_integrity.h",
    "banners/app_banner_manager_desktop.cc",
    "banners/app_banner_manager_desktop.h",
    "metrics/incognito_observer_desktop.cc",
    "policy/client_data_delegate_desktop.cc",
    "policy/client_data_delegate_desktop.h",
    "policy/cloud/user_policy_signin_service.cc",
    "policy/cloud/user_policy_signin_service.h",
    "policy/cloud/user_policy_signin_service_internal.h",
    "speech/chrome_speech_recognition_service.cc",
    "speech/chrome_speech_recognition_service.h",
    "speech/speech_recognition_service_factory.cc",
    "speech/speech_recognition_service_factory.h",
    "accessibility/live_caption/live_caption_controller_factory.cc",
    "accessibility/live_caption/live_caption_speech_recognition_host.cc",
    "speech/speech_recognition_client_browser_interface_factory.cc",
    "speech/speech_recognition_client_browser_interface.cc",
    "performance_manager/persistence/site_data/site_data_cache_facade.cc",
    "performance_manager/persistence/site_data/site_data_cache_facade.h",
    "performance_manager/persistence/site_data/site_data_cache_facade_factory.cc",
    "performance_manager/persistence/site_data/site_data_cache_facade_factory.h",
    "performance_manager/policies/background_tab_loading_policy.cc",
    "profiles/avatar_menu.cc",
    "profiles/avatar_menu.h",
    #"profiles/profile_window.cc",
    #"profiles/profile_window.h",
    "profiles/profile_list_desktop.cc",
    "profiles/profile_list_desktop.h",
    "renderer_context_menu/spelling_menu_observer.cc",
    "renderer_context_menu/spelling_menu_observer.h",
    "renderer_context_menu/render_view_context_menu.cc",
    "hid/chrome_hid_delegate.cc",
    "hid/chrome_hid_delegate.h",
    "first_run/upgrade_util.cc",
    "autocomplete/tab_matcher_desktop.cc",
    "platform_util.cc",

    "hid/hid_system_tray_icon.cc",
    "lifetime/application_lifetime_desktop.cc",
    "metrics/power/process_monitor.cc",
    "metrics/power/power_metrics_reporter.cc",
    "profiles/delete_profile_helper.cc",
    "accessibility/live_translate_controller_factory.cc",
    "supervised_user/desktop/supervised_user_service_platform_delegate.cc",
    "supervised_user/desktop/supervised_user_service_platform_delegate.h",

    "webapps/webapps_client_desktop.cc",
    "webapps/webapps_client_desktop.h",
    "support_tool/support_tool_util.cc",
    "support_tool/support_tool_util.h",


    "component_updater/screen_ai_component_installer.cc",
    "component_updater/screen_ai_component_installer.h",
    "device_notifications/device_status_icon_renderer.cc",
    "device_notifications/device_status_icon_renderer.h",
    "external_protocol/auto_launch_protocols_policy_handler.cc",
    "external_protocol/auto_launch_protocols_policy_handler.h",
    "hid/hid_status_icon.cc",
    "hid/hid_status_icon.h",
    "net/disk_cache_dir_policy_handler.cc",
    "net/disk_cache_dir_policy_handler.h",
    "policy/cbcm_invalidations_initializer.cc",
    "policy/cbcm_invalidations_initializer.h",
    "policy/chrome_browser_cloud_management_controller_desktop.cc",
    "policy/chrome_browser_cloud_management_controller_desktop.h",
    "policy/chrome_browser_cloud_management_register_watcher.cc",
    "policy/chrome_browser_cloud_management_register_watcher.h",
    "policy/file_selection_dialogs_policy_handler.cc",
    "policy/file_selection_dialogs_policy_handler.h",
    "screen_ai/screen_ai_downloader_non_chromeos.cc",
    "screen_ai/screen_ai_downloader_non_chromeos.h",
    "usb/usb_status_icon.cc",
    "usb/usb_status_icon.h",

    "accessibility/ax_main_node_annotator_controller.cc",
    "accessibility/ax_main_node_annotator_controller.h",
    "accessibility/ax_main_node_annotator_controller_factory.cc",
    "accessibility/ax_main_node_annotator_controller_factory.h",
    
    
  ]
  mises_chrome_browser_exception_deps += [
    "//chrome/browser/companion/visual_query",
    "//chrome/browser/ui/views/side_panel",
    "//chrome/browser/lens/region_search",
    "//chrome/browser/ui/apps",
    "//chrome/browser/ui/apps:impl",
    "//chrome/browser/search/background",
    "//chrome/browser/ui/lens",
    "//chrome/browser/ui/views/toolbar",
    "//chrome/browser/ui/exclusive_access",
    "//chrome/browser/companion/core",
    #"//chrome/browser/shortcuts",
    "//chrome/browser/ui/webui/searchbox",
    "//chrome/browser/ui/webui/top_chrome",
    "//chrome/browser/ui/webui/top_chrome:impl",
    "//chrome/browser/ui/webui/privacy_sandbox/related_website_sets:mojo_bindings",
    #"//ui/webui/resources/cr_components/history_embeddings:mojo_bindings",
    "//services/screen_ai",
    "//services/screen_ai/public/cpp:utilities",
    #"//services/screen_ai/public/mojom",
     "//chrome/browser/themes",
    "//components/live_caption",
    "//components/live_caption:live_translate",
    "//chrome/browser/media/router/discovery/access_code:access_code_sink_service",

      "//chrome/browser/screen_ai:prefs",
      "//chrome/browser/screen_ai:screen_ai_install_state",
      "//chrome/browser/screen_ai:screen_ai_service_router_factory",
      "//chrome/browser/screen_ai/public:optical_character_recognizer",
      
  ]
  mises_chrome_browser_exception_allow_circular_includes_from += [
    "//chrome/browser/ui/views/side_panel",
    "//chrome/browser/ui/apps:impl",
    "//chrome/browser/ui/views/toolbar",
    "//chrome/browser/ui/webui/searchbox",
    "//chrome/browser/ui/webui/top_chrome:impl",
    "//chrome/browser/ui/exclusive_access",
    "//chrome/browser/media/router/discovery/access_code:access_code_sink_service",
  ]
}


mises_chrome_browser_sources += mises_browser_autocomplete_sources
mises_chrome_browser_deps += mises_browser_autocomplete_deps

mises_chrome_browser_sources += mises_browser_ipfs_sources
mises_chrome_browser_deps += mises_browser_ipfs_deps

#web3sites_safe
#mises_chrome_browser_sources += mises_browser_web3sites_safe_sources
#mises_chrome_browser_deps += mises_browser_web3sites_safe_deps

mises_chrome_browser_sources += mises_browser_brave_wallet_sources
mises_chrome_browser_deps += mises_browser_brave_wallet_deps

mises_chrome_browser_sources += mises_browser_permissions_sources
mises_chrome_browser_deps += mises_browser_permissions_deps

mises_chrome_browser_sources += mises_browser_ephemeral_storage_sources
mises_chrome_browser_deps += mises_browser_ephemeral_storage_deps

mises_chrome_browser_deps += mises_chromium_src_chrome_browser_prefs_deps