# Copyright (c) 2019 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

brave_net_sources = [
  "//mises/net/decentralized_dns/constants.h",
  "//mises/net/http/partitioned_host_state_map.cc",
  "//mises/net/http/partitioned_host_state_map.h",
#  "//mises/net/proxy_resolution/proxy_config_service_tor.cc",
#  "//mises/net/proxy_resolution/proxy_config_service_tor.h",
]
