# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.


msies_chrome_renderer_sources = [
]

mises_chrome_renderer_public_deps = [
  "//mojo/public/cpp/bindings",
  "//third_party/blink/public:blink",
  "//third_party/blink/public/common",
]

