# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//third_party/widevine/cdm/widevine.gni")

mises_chrome_renderer_sources = [
  "//mises/renderer/mises_content_renderer_client.cc",
  "//mises/renderer/mises_content_renderer_client.h",
  "//mises/renderer/mises_render_thread_observer.cc",
  "//mises/renderer/mises_render_thread_observer.h",
]

mises_chrome_renderer_deps = [
  "//mojo/public/cpp/bindings",
  "//third_party/blink/public:blink",
  "//third_party/blink/public/common",
  "//mises/components/brave_wallet/common",
  "//mises/components/brave_wallet/renderer",
  "//mises/components/safe_builtins/renderer",
  "//mises/renderer/brave_wallet",
]

mises_chrome_renderer_deps += [ "//third_party/widevine/cdm:headers" ]

mises_chrome_renderer_public_deps = []

