# Copyright 2022 The Brave Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//tools/grit/grit_rule.gni")

mises_grit_resource_id_target = "//mises/resources:mises_resource_ids"
mises_grit_resource_id_file =
    get_label_info(mises_grit_resource_id_target, "target_gen_dir") +
    "/mises_resource_ids"

template("mises_grit") {
  grit(target_name) {
    forward_variables_from(invoker, "*")
    resource_ids = mises_grit_resource_id_file
    if (!defined(deps)) {
      deps = []
    }
    deps += [ mises_grit_resource_id_target ]
  }
}
