import("//mises/utility/importer/sources.gni")
import("//mises/components/ipfs/buildflags/buildflags.gni")

mises_utility_sources = [
]
mises_utility_sources += mises_utility_importer_sources

mises_utility_deps = [
  "//mojo/public/cpp/bindings",
]

mises_utility_deps += mises_utility_importer_deps

if (enable_ipfs) {
  mises_utility_deps += [
    "//mises/components/services/ipfs",
    "//mises/components/services/ipfs/public/mojom",
  ]
}


mises_utility_public_deps = []
mises_utility_public_deps += mises_utility_importer_public_deps
