# Copyright 2022 The Brave Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

mises_feed_java_sources = [
  "//mises/android/feed/core/java/src/org/chromium/chrome/browser/feed/MisesFeedSurfaceCoordinator.java",
  "//mises/android/feed/core/java/src/org/chromium/chrome/browser/feed/MisesFeedSurfaceMediator.java",
]
